# memfault-firmware-sdk

./: .clang-format  .codecov.yml  .cyignore  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CHANGES.md  CMakeLists.txt  Dockerfile  Kconfig  License.txt  README.md  VERSION  idf_component.yml  project.yml  repository.yml  requirements.txt  version.yml
.circleci/: Dockerfile  config.yml  runas.sh
_tests/: Makefile  README.md
_tests/makefiles/: Makefile_memfault_heartbeat_metrics.mk  Makefile_memfault_metrics_serializer.mk  Makefile_memfault_metrics_storage.mk
_tests/src/: test_memfault_heartbeat_metrics.cpp  test_memfault_metrics_serializer.cpp  test_memfault_metrics_storage.cpp
cmake/: Memfault.cmake
components/core/: README.md
components/demo/: README.md
components/metrics/: README.md
components/panics/: README.md
components/util/: README.md
config/include/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_platform_log_config.h  memfault_trace_reason_user_config.def
config/src/: memfault_platform_coredump_regions.c  memfault_platform_port.c
examples/: README.md
examples/dialog/: README.md
examples/esp32/: README.md
examples/freertos/: .gitignore  FreeRTOSConfig.h  Makefile  README.md  console.c  console.h  main.c
examples/libcurl/: Makefile  README.md  get_latest.c  post_chunks.c
examples/mbed/: README.md
examples/nrf-connect-sdk/bluetooth/memfault_demo_app/: 1mbaud_uart.overlay  CMakeLists.txt  Kconfig.sysbuild  pm_static_nrf54l15dk_nrf54l15_cpuapp.yml  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp.yml  prj.conf  sample.yaml  west.yml
examples/nrf-connect-sdk/bluetooth/memfault_demo_app/boards/: nrf54h20dk_nrf54h20_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp_noinit.ld  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
examples/nrf-connect-sdk/bluetooth/memfault_demo_app/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
examples/nrf-connect-sdk/bluetooth/memfault_demo_app/overlays/: ncs-pre-v3.2.0.conf
examples/nrf-connect-sdk/bluetooth/memfault_demo_app/src/: bt_smp_dfu_session.c  main.c  shell_commands.c
examples/nrf-connect-sdk/cellular/memfault_demo_app/: CMakeLists.txt  README.md  overlay-coap.conf  prj.conf  west.yml
examples/nrf-connect-sdk/cellular/memfault_demo_app/boards/: nrf9151dk_nrf9151_ns.overlay  nrf9160dk_nrf9160_ns_0_14_0.overlay
examples/nrf-connect-sdk/cellular/memfault_demo_app/config/: memfault_platform_config.h
examples/nrf-connect-sdk/cellular/memfault_demo_app/overlays/: ncs-main.conf  ncs-pre-v2.2.99.conf  ncs-pre-v2.4.0.conf  ncs-pre-v2.8.0.conf  ncs-v3.3.0.conf
examples/nrf-connect-sdk/cellular/memfault_demo_app/src/: main.c  memfault_demo_app.h  watchdog.c
examples/nrf-connect-sdk/nrf5/memfault_demo_app/: CMakeLists.txt  Kconfig  VERSION  custom-noinit-coredump.ld  custom-noinit-reboot.ld  pm_static_nrf54l15dk_nrf54l15_cpuapp.yml  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp.yml  pm_static_nrf54lm20pdk_nrf54lm20a_cpuapp.yml  prj.conf  west.yml
examples/nrf-connect-sdk/nrf5/memfault_demo_app/boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay  nrf54h20dk_nrf54h20_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp_noinit.ld  nrf54lm20pdk_nrf54lm20a_cpuapp.overlay.example
examples/nrf-connect-sdk/nrf5/memfault_demo_app/child_image/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay
examples/nrf-connect-sdk/nrf5/memfault_demo_app/config/: memfault_platform_config.h  memfault_trace_reason_user_config.def
examples/nrf-connect-sdk/nrf5/memfault_demo_app/src/: main.c  shell_commands.c
examples/nrf-connect-sdk/nrf9160/memfault_demo_app/: CMakeLists.txt  README.md  overlay-coap.conf  prj.conf  sample.yaml  west.yml
examples/nrf-connect-sdk/nrf9160/memfault_demo_app/child_image/: mcuboot.conf
examples/nrf-connect-sdk/nrf9160/memfault_demo_app/config/: memfault_metrics_heartbeat_config.def
examples/nrf-connect-sdk/nrf9160/memfault_demo_app/overlays/: ncs-pre-v2.0.0.conf  ncs-pre-v2.9.99.conf
examples/nrf-connect-sdk/nrf9160/memfault_demo_app/src/: main.c  memfault_demo_app.h  watchdog.c
examples/nrf5/: README.md
examples/zephyr/qemu/qemu-app/: CMakeLists.txt  Kconfig  LICENSE  prj.conf  west.yml
examples/zephyr/qemu/qemu-app/app/: CMakeLists.txt
examples/zephyr/qemu/qemu-app/boards/: apollo4p_blue_kxr_evb.conf  apollo4p_blue_kxr_evb.overlay  apollo510_evb.overlay  b_u585i_iot02a.conf  b_u585i_iot02a.overlay  mps2_an385.conf  mps2_an385.overlay  nucleo_f756zg.conf  nucleo_f756zg.overlay  nucleo_l496zg.conf  nucleo_l496zg.overlay  qemu_cortex_m3.conf
examples/zephyr/qemu/qemu-app/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
examples/zephyr/qemu/qemu-app/overlays/: zephyr-v3.4.conf
examples/zephyr/qemu/qemu-app/src/: cdr.c  cdr.h  main.c  metrics.c
examples/zephyr/qemu/qemu-app/zephyr/: module.yml
makefiles/: MemfaultWorker.mk
scripts/: Dockerfile.py27  cmsis_pack_bundle.py  create_arduino_library.py  eclipse_patch.py  fw_build_id.py  memfault_gdb.py  memfault_group.py
scripts/mflt-build-id/: Dockerfile.py27  README.md  pyproject.toml  ruff.toml  setup.py
scripts/mflt-build-id/src/mflt_build_id/: __init__.py
scripts/mflt-build-id/tasks/: __init__.py
scripts/mflt-build-id/tests_mflt_build_id/: conftest.py  test_elf_file_helper.py  test_fw_build_id.py
scripts/mflt-build-id/tests_mflt_build_id/elf_fixtures/: __init__.py  crc32_build_id_populated.elf  crc32_build_id_unpopulated.elf  gnu_id_present_and_not_used.elf  gnu_id_with_short_len.elf  memfault_build_id_present_and_populated.elf  memfault_id_used_gnu_id_present.elf  no_memfault_symbols.elf  no_symtab_no_text_no_data.elf
scripts/mflt-build-id/tests_mflt_build_id/snapshots/: __init__.py  snap_test_fw_build_id.py
tasks/: __init__.py  esp32.py  gdb.py  macos_ftdi.py  mbed.py  mbed_ccache.patch  nrf.py  nrfconnect.py  print_chunk_watcher.py  print_coredump_watcher.py  wiced.py  zephyr.py
tests/: Makefile  MakefileWorker.mk  MakefileWorkerOverrides.mk  README.md  test.py
zephyr/: module.yml
(+1118 files in other folders)
