[tool.poetry]
name = "mflt-build-id"
version = "1.0.1"
description = "Memfault Build Id injector"
authors = ["Memfault Inc <hello@memfault.com>"]
repository = "https://github.com/memfault/memfault-firmware-sdk"
packages = [
  { include = "mflt_build_id", from = "src" }
]
readme = "README.md"

[tool.poetry.scripts]
mflt_build_id = 'mflt_build_id:main'

[tool.poetry.dependencies]
python = "^3.6" # must match memfault-cli
mflt-pyelftools = "^0.30.1"

[tool.poetry.dev-dependencies]
pytest = ">=6"
pytest-cov = "^2"
pytest-timeout = "^2.0"
wasmer = "0.3.0"

#
# NB: Uncommenting these lines will prevent installing the project in editable mode.
#
# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
