[project]
name = "mflt-build-id"
version = "1.1.0"
dependencies = [
  "pyelftools >=0.31",
]
requires-python = ">=3.8,<4.0"

[project.scripts]
mflt_build_id = 'mflt_build_id:main'
mflt-build-id = 'mflt_build_id:main'

[dependency-groups]
dev = [
  "pytest >=6",
  "pytest-cov >=2,<3",
  "pytest-timeout >=2.0,<3.0",
]
