[project]
name = "mflt-build-id"
version = "1.1.1"
description = "Memfault CLI tool"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
  { name = "Memfault", email = "hello@memfault.com" }
]
dependencies = [
  "pyelftools >=0.31",
]
requires-python = ">=3.8,<4.0"

[project.urls]
homepage = "https://docs.memfault.com"

[project.scripts]
mflt_build_id = 'mflt_build_id:main'
mflt-build-id = 'mflt_build_id:main'

[dependency-groups]
dev = [
  "pytest >=6",
  "pytest-cov >=2,<3",
  "pytest-timeout >=2.0,<3.0",
]

[tool.uv]
package = true
